# srm

./: Cargo.toml  LICENSE-MIT  README.md  install.sh
.cargo/: config.toml
.github/workflows/: build.yml
daemon/: com.larpi.srm.plist  srm.service
debian/: changelog  control  postinst  rules
scripts/: build-deb.sh
src/: args.rs  cli.rs  commands.rs  config.rs  core.rs  daemon.rs  error.rs  file_manager.rs  lib.rs  logging.rs  main.rs  storage.rs  utils.rs
