[package]
name = "safe-remove"
version = "0.1.1"
edition = "2021"
authors = ["ray <kjwdev01@gmail.com> "]
description = "Safe Remove (srm): Move files to a safe location instead of deleting them immediately."
license = "MIT" 
repository = "https://github.com/kjwsl/srm"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "unstable-doc"] }
colored = "3.0"
directories = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.43", features = ["full"] }
toml = "0.8"
